<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Profile Screen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- MainActivity -->
    <string name="name">Full name</string>
    <string name="phone">Phone number</string>
    <string name="text">Texting number</string>
    <string name="email">Email address</string>
    <string name="color">Your profile color (in hex)</string>
    <string name="image">Name of image file (without extension)</string>
    <string name="btn_profile">Myspace style profile</string>
    <string name="btn_profile2">Standard style profile</string>
    
    <!-- ProfileActivity -->
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="name_and_signup">NAME HERE \n SIGNUP HERE</string>
    <string name="title_activity_profile2">ProfileActivity2</string>
    <string name="welcome_to_profile">Welcome to the profile activity</string>
    <string name="txt_profile2_name">FIRSTNAME LASTNAME</string>
    <string name="txt_profile2_signup">XX/YY/ZZZZ</string>
    <string name="title_activity_mainer">MainActivity</string>
    <string name="txt_profile2_info">22sp</string>

</resources>
